# fastapi-template

./: .env.example  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
src/: alembic.ini  main.py  pytest.ini
src/api/: routes.py
src/api/v1/: healthchecks.py
src/core/: config.py  sentry.py
src/crud/: healthchecks.py
src/database/: base.py  engine.py  healthchecks.py
src/migrations/: __main__.py  env.py
src/models/: __init__.py  mixins.py
src/schemas/: base_schemas.py
src/sdk/exceptions/: __init__.py  exceptions.py  handlers.py  schemas.py
src/sdk/logging/: __init__.py  config.py  helpers.py  logged_route.py  logged_router.py
src/tests/: common.py  conftest.py  utils.py
src/tests/api/: test_healthchecks.py
src/tests/expected_results/: expected_results.py
src/tests/factories/: base.py
src/tests/payloads/: payloads.py
